Se eliminan los warnings de compilación por la utilización de clases fuera del API de Java.