@@ -17,7 +17,7 @@
  */
 package org.jajim.utilidades.cifrado;
 
-import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
@@ -28,12 +28,13 @@ import javax.crypto.NoSuchPaddingException;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
+import org.apache.commons.codec.binary.Base64;
 import org.jajim.excepciones.ImposibleCifrarDescifrarException;
 import org.jajim.excepciones.ImposibleCifrarException;
 import org.jajim.excepciones.ImposibleDescifrarException;
 import org.jajim.utilidades.log.ManejadorDeLogs;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
+
 
 /**
  * @author Florencio Cañizal Calles
@@ -79,15 +80,15 @@ public class Cifrador {
      */
     public String cifrar(String cadena) throws ImposibleCifrarException {
 
-        byte[] bloque_cifrado = null;
         String c = null;
 
         try {
             // Arrancar en modo cifrar
             cifrado.init(Cipher.ENCRYPT_MODE, sk);
             // Cifrar
-            bloque_cifrado = cifrado.doFinal(cadena.getBytes(), 0, cadena.getBytes().length);
-            c = new BASE64Encoder().encode(bloque_cifrado);
+            byte[] bloqueCifrado = cifrado.doFinal(cadena.getBytes(), 0, cadena.getBytes().length);
+            byte[] bloqueCifradoCodificado = Base64.encodeBase64(bloqueCifrado);
+            c = new String(bloqueCifradoCodificado);
         }
         catch (InvalidKeyException | IllegalBlockSizeException | BadPaddingException e) {
             // En caso de que se produzca un error se escribe en el fichero
@@ -110,17 +111,16 @@ public class Cifrador {
      */
     public String descifrar(String cadena) throws ImposibleDescifrarException {
 
-        byte[] bloque_descifrado = null;
         String c = null;
 
         try {
             // Arrancar en modo descifrar
             cifrado.init(Cipher.DECRYPT_MODE, sk);
             // Descifrar
-            bloque_descifrado = cifrado.doFinal(new BASE64Decoder().decodeBuffer(cadena));
-            c = new String(bloque_descifrado, "ISO-8859-1");
+            byte[] bloqueDescifrado = cifrado.doFinal(Base64.decodeBase64(cadena));
+            c = new String(bloqueDescifrado, "ISO-8859-1");
         }
-        catch (InvalidKeyException | IOException | IllegalBlockSizeException | BadPaddingException e) {
+        catch (InvalidKeyException | UnsupportedEncodingException | IllegalBlockSizeException | BadPaddingException e) {
             // En caso de que se produzca un error se escribe en el fichero
             // de log y se lanza una excepción
             ManejadorDeLogs mdl = ManejadorDeLogs.getManejadorDeLogs();
